# flask-app-rest

./: .flaskenv  app.py  pyproject.toml  requirements.txt
src/: __init__.py
